--- a/Views/Categorias/Details.cshtml
+++ b/Views/Categorias/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Categoria</h4>
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CategoriaID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.CategoriaID">Editar</a> |
+    <a asp-action="Index">Regresar a lista</a>
 </div>
