--- a/Views/Categorias/Index.cshtml
+++ b/Views/Categorias/Index.cshtml
@@ -4,20 +4,20 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Categoria Cursos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Nombre)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NombreSortParm"]"> @Html.DisplayNameFor(model => model.Nombre) </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DescripcionSortParm"]">@Html.DisplayNameFor(model => model.Descripcion) </a>
+</th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Estado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CategoriaID">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.CategoriaID">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.CategoriaID">Eliminar</a>
             </td>
         </tr>
 }
